// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClickStop - Snapshots > matches snapshot for article element 1`] = `
<article
  class=""
  data-testid="click-stop"
>
  Article Element
</article>
`;

exports[`ClickStop - Snapshots > matches snapshot for section element 1`] = `
<section
  class=""
  data-testid="click-stop"
>
  Section Element
</section>
`;

exports[`ClickStop - Snapshots > matches snapshot for span element 1`] = `
<span
  class=""
  data-testid="click-stop"
>
  Span Element
</span>
`;

exports[`ClickStop - Snapshots > matches snapshot with children 1`] = `
<div
  class=""
  data-testid="click-stop"
>
  <button>
    Click me
  </button>
</div>
`;

exports[`ClickStop - Snapshots > matches snapshot with combined props 1`] = `
<section
  class="custom-class"
  data-testid="test-id"
  id="test"
>
  Combined Props
</section>
`;

exports[`ClickStop - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="custom-class"
  data-testid="click-stop"
>
  Custom Class
</div>
`;

exports[`ClickStop - Snapshots > matches snapshot with custom data-testid 1`] = `
<div
  class=""
  data-testid="custom-testid"
>
  Custom Test ID
</div>
`;

exports[`ClickStop - Snapshots > matches snapshot with default props 1`] = `
<div
  class=""
  data-testid="click-stop"
>
  Default ClickStop
</div>
`;

exports[`ClickStop - Snapshots > matches snapshot with multiple children 1`] = `
<div
  class=""
  data-testid="click-stop"
>
  <button>
    Button 1
  </button>
  <button>
    Button 2
  </button>
  <span>
    Text
  </span>
</div>
`;

exports[`ClickStop - Snapshots > matches snapshot with nested content 1`] = `
<div
  class=""
  data-testid="click-stop"
>
  <div>
    <h1>
      Title
    </h1>
    <p>
      Content
    </p>
  </div>
</div>
`;
